namespace MyAppApi.Data.Models.DTOs
{
    public class CommentDto
    {
        public string Content { get; set; } = string.Empty;
    }
}
