namespace MyAppApi.Data.Models.DTOs
{
    public class ReplyDto
    {
        public string Content { get; set; } = string.Empty;
    }
}
