erDiagram
    PROJECT ||--o{ PROJECT_IMAGE : "has"
    PROJECT ||--o{ PROJECT_DOCUMENT : "has"
    PROJECT ||--o{ TEAM_MEMBER : "has"
    PROJECT ||--o{ MILESTONE : "plans"
    PROJECT ||--o{ PROJECT_UPDATE : "publishes"
    PROJECT_UPDATE ||--o{ PROJECT_UPDATE_IMAGE : "has"
    PROJECT ||--o{ REVIEW : "receives"
    PROJECT ||--o{ REPORT : "is flagged by"
    PROJECT ||--o{ PROJECT_VIEW : "is viewed in"
    PROJECT ||--o{ COMMENT : "carries"
    COMMENT ||--o{ REPLY : "receives"

    USER ||--o{ REFRESH_TOKEN : "holds"
    USER ||--o{ SECURITY_LOG : "generates"
    USER ||--o{ BOOKMARK : "saves"
    USER ||--o{ FOLLOW : "follows"
    USER ||--o{ MESSAGE : "sends"
    MESSAGE ||--o| MESSAGE_ATTACHMENT : "carries"
    USER ||--o{ NOTIFICATION : "receives"
